[LINT] Added W293 rule to ignored list

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,8 @@ statistics = True
 # Which LINTING rules to ignore
 ignore = F401, # Imported but unused
         F403, # Unable to detect undefined names
-        B028 # No explicit stacklevel keyword argument found
+        B028, # No explicit stacklevel keyword argument found
+        W293, # blank line contains whitespace (I don't like this rule, interferes with good function indentation)
 
 [coverage:run]
 # Here we specify plugins for coverage to be used:
