--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,11 @@ ignore = F401, # Imported but unused
         F403, # Unable to detect undefined names
         B028, # No explicit stacklevel keyword argument found
         W293, # blank line contains whitespace (I don't like this rule, interferes with good function indentation)
+        
+per-file-ignores = 
+        # It poses no inconvenient to violate B006 in this file.
+        tests/test_ageml/test_modelling.py: B006 
+
 
 [coverage:run]
 # Here we specify plugins for coverage to be used:
