--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ ignore = F401, # Imported but unused
         F403, # Unable to detect undefined names
         B028, # No explicit stacklevel keyword argument found
         W293, # blank line contains whitespace (I don't like this rule, interferes with good function indentation)
+        C419, # Unnecessary list comprehension passed to all() prevents short-circuiting - rewrite as a generator 
         
 per-file-ignores = 
         # It poses no inconvenient to violate B006 in this file.
