--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,10 @@ packages = [{include = "ageml", from = "src"}]
 python = "^3.8, <3.12"
 numpy = "1.24"
 pandas = "2.0"
-scipy= "1.10"
+scipy = "1.10"
+statsmodels = "0.14.0"
 matplotlib = "3.5"
-scikit-learn= "1.3"
+scikit-learn = "1.3"
 coverage-conditional-plugin = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
