[ENH] ageml can now be executed with 'ageml' from the terminal after doing pip install ageml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,6 @@ flake8-broken-line = "*"
 flake8-comprehensions = "*"
 # Formatting
 black = {version = "^23.1a1", allow-prereleases = true}
+
+[tool.poetry.scripts]
+ageml = "ageml.__main__:main"
