--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,8 @@ ignore = F401, # Imported but unused
         B028, # No explicit stacklevel keyword argument found
         W293, # blank line contains whitespace (I don't like this rule, interferes with good function indentation)
         C419, # Unnecessary list comprehension passed to all() prevents short-circuiting - rewrite as a generator 
-        
+        E702, # Multiple statements on one line (semicolon)
+
 per-file-ignores = 
         # It poses no inconvenient to violate B006 in this file.
         tests/test_ageml/test_modelling.py: B006 
