[CI] Adjustments in linting for passing pipelines

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ ignore = F401, # Imported but unused
         W293, # blank line contains whitespace (I don't like this rule, interferes with good function indentation)
         C419, # Unnecessary list comprehension passed to all() prevents short-circuiting - rewrite as a generator 
         E702, # Multiple statements on one line (semicolon)
+        B023, # Function definition does not bind loop variable 'system_name'.
 
 per-file-ignores = 
         # It poses no inconvenient to violate B006 in this file.
