--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ statsmodels = "0.14.0"
 matplotlib = "3.5"
 scikit-learn = "1.3"
 coverage-conditional-plugin = "^0.7.0"
+xgboost = "^2.0.3"
 
 [tool.poetry.dev-dependencies]
 nox-poetry = "*"
