--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,9 @@ black = {version = "^23.1a1", allow-prereleases = true}
 [tool.poetry.scripts]
 ageml = "ageml.__main__:main"
 model_age = "ageml.commands:model_age"
-factor_analysis = "ageml.commands:factor_analysis"
+factor_correlation = "ageml.commands:factor_correlation"
 clinical_groups = "ageml.commands:clinical_groups"
 clinical_classify = "ageml.commands:clinical_classify"
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.0"
+
