--- a/.github/workflows/lint_test_coverage.yml
+++ b/.github/workflows/lint_test_coverage.yml
@@ -1,14 +1,11 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Test Coverage Lint
+name: TestCov Lint
 
 on:
   push:
-    branches-ignore:
+    branches:
       - main
+      - release-*
   pull_request:
-    branches: [ "main", "$default_branch" ]
 
 jobs:
   build:
@@ -25,16 +22,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install poetry and the package dependencies
+    - name: Dependency installation
+      if: github.event_name == 'pull_request' || github.event_name == 'push'
       run: |
         python -m pip install --upgrade pip
-        python -m pip install poetry nox nox-poetry   
-    - name: Nox TEST session
-      run: |
-        nox -s test
-    - name: Nox COVERAGE session
+        python -m pip install poetry nox nox-poetry
+    - name: TestCoverage
+      if: github.event_name == 'pull_request' || github.event_name == 'push'
       run: |
         nox -s coverage
-    - name: Nox LINTING session
+    - name: Linting
+      if: github.event_name == 'pull_request' || github.event_name == 'push'
       run: |
         nox -s lint
