--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,16 @@ scipy = ">=1.10"
 statsmodels = "0.14.0"
 matplotlib = "3.5"
 scikit-learn = "1.3"
-coverage-conditional-plugin = "^0.7.0"
 xgboost = "^2.0.3"
 pillow = "^10.3.0"
 hpsklearn = {git = "https://github.com/hyperopt/hyperopt-sklearn", rev = "4bc286479677a0bfd2178dac4546ea268b3f3b77"}
 
 [tool.poetry.dev-dependencies]
+# Testing and linting tool
 nox-poetry = "*"
+coverage-conditional-plugin = "^0.7.0"
+# Pre-commit
+pre-commit = "^3.0.0"
 # Testing
 pytest = "*"
 pytest-cov = "*"
