--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ matplotlib = "3.5"
 scikit-learn = "1.3"
 xgboost = "^2.0.3"
 pillow = "^10.3.0"
-hpsklearn = {git = "https://github.com/hyperopt/hyperopt-sklearn", rev = "4bc286479677a0bfd2178dac4546ea268b3f3b77"}
+hpsklearn-compneurobilbao = "*"
 
 [tool.poetry.dev-dependencies]
 # Testing and linting tool
