--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ ruff = "^0.3.0"
 ageml = "ageml.__main__:main"
 model_age = "ageml.commands:model_age"
 model_feature_influence = "ageml.commands:model_feature_influence"
+age_model_vs_logistic_regression = "ageml.commands:age_model_vs_logistic_regression"
 factor_correlation = "ageml.commands:factor_correlation"
 clinical_groups = "ageml.commands:clinical_groups"
 clinical_classify = "ageml.commands:clinical_classify"
