--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "ageml"
-version = "0.2.0"
+version = "0.3.0"
 description = "AgeML is a Python package for Age Modelling with Machine Learning made easy."
 authors = [ "Computational Neuroimaging Lab Bilbao, IIS Biobizkaia",
             "jorge.garcia.condado <jorgegarciacondado@gmail.com>",
@@ -12,8 +12,8 @@ authors = [ "Computational Neuroimaging Lab Bilbao, IIS Biobizkaia",
             "asier.erramuzpe <aerramuzpe@gmail.com>",
             "jesus.cortes <jesus.m.cortes@gmail.com>"
             ]
-maintainers = ["jorge.garcia.condado <jorgegarciacondado@gmail.com>",
-                "inigo.tellaetxe <inigotellaetxe@gmail.com>"
+maintainers = ["inigo.tellaetxe <inigotellaetxe@gmail.com>",
+                "jorge.garcia.condado <jorgegarciacondado@gmail.com>",
                 ]
 readme = "README.md"
 repository = "https://github.com/compneurobilbao/ageml"
