--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,13 +23,13 @@ classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
 packages = [{include = "ageml", from = "src"}]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12"
+python = ">=3.10,<3.13"
 numpy = ">=1.24, <2.0.0"
 pandas = ">=2.0.2"
 scipy = ">=1.10"
 statsmodels = "0.14.0"
-matplotlib = "3.5"
-scikit-learn = "1.3"
+matplotlib = ">3.6"
+scikit-learn = ">=1.3"
 xgboost = "^2.0.3"
 pillow = "^10.3.0"
 hpsklearn-compneurobilbao = "*"
